# Company-Hell

./: CMakeLists.txt
include/: Artist.h  Employee.h  Enum.h  Guard.h  Gun.h  MyVector.h  Person.h  Programmer.h
lib/: Artist.cpp  Employee.cpp  Enum.cpp  Guard.cpp  Gun.cpp  MyVector.cpp  Person.cpp  PersonalInfo.cpp  Programmer.cpp  WorkStuffInfo.cpp
test/: main.cpp
