cmake_minimum_required(VERSION 3.17)
project(OOP3)

set(CMAKE_CXX_STANDARD 20)

add_executable(OOP3 cmake-build-debug/PersonalInfo.cpp cmake-build-debug/PersonalInfo.h cmake-build-debug/WorkStuffInfo.cpp cmake-build-debug/WorkStuffInfo.h cmake-build-debug/Employee.cpp cmake-build-debug/Employee.h cmake-build-debug/Artist.cpp cmake-build-debug/Artist.h cmake-build-debug/Programmer.cpp cmake-build-debug/Programmer.h cmake-build-debug/Enum.cpp cmake-build-debug/Enum.h cmake-build-debug/Gun.cpp cmake-build-debug/Gun.h cmake-build-debug/Guard.cpp cmake-build-debug/Guard.h cmake-build-debug/main.cpp cmake-build-debug/Person.cpp cmake-build-debug/Person.h)